# goal_fined_3D

./: .gitignore  CMakeLists.txt  README.md
resources/: bfbbr_-_checkpoint.glb  geometry_dash_checkpoints.glb  sci-fi_modular_floor_tiles.glb
resources/checkered-tile-floor/source/Floor-Sketchfab/: Floor.mtl
src/: Bottom.cpp  Bottom.h  Player.cpp  Player.h  Wall.cpp  Wall.h  main.cpp
src/RL/: RLTrainData.cpp  RLTrainData.h  RlResponse.cpp  RlResponse.h
src/physics/: AABB.cpp  AABB.h  CheckpointPhysics.cpp  CheckpointPhysics.h  IAABB.h  WallPhysics.cpp  WallPhysics.h
src/physics/raycast/: RayCaster.cpp  RayCaster.h
src/render/: AffineTransform.cpp  AffineTransform.h  Bottom.h  CheckpointRender.cpp  CheckpointRender.h  Player.cpp  Player.h  PlayerMovement.h  WallRender.cpp  WallRender.h
src/render/model/: Mesh.h  Model.h  Shader.h
src/shaders/: backpack.vert  bottom.frag  colors.frag  colors.vert  wall.frag
src/util/: Mesh.h  Model.cpp  Model.h  Shader.h
src/websocket/: WebSocketClient.cpp  WebSocketClient.h
